--- a/RetroAchievementTracker/Shared/NavMenu.razor
+++ b/RetroAchievementTracker/Shared/NavMenu.razor
@@ -1,39 +1,74 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">RetroAchievementTracker</a>
-        <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-    </div>
-</div>
+﻿<MudDrawer @bind-Open="@open" Elevation="1" Width="275px">
+    <MudDrawerHeader>
+        <MudText Typo="Typo.h6" Class="text-white" Style="color: white;">RetroAchievements Tracker</MudText>
+    </MudDrawerHeader>
+    <MudDivider Class="my-2" />
+    <MudNavMenu Color="Color.Tertiary" Bordered="true">
+        <MudNavGroup Title="Nintendo">
+            <MudNavLink>Game Boy</MudNavLink>
+            <MudNavLink>Game Boy Colour</MudNavLink>
+            <MudNavLink>Game Boy Advance</MudNavLink>
+            <MudNavLink>NES</MudNavLink>
+            <MudNavLink>SNES</MudNavLink>
+            <MudNavLink>Nintendo 64</MudNavLink>
+            <MudNavLink>Nintendo DS</MudNavLink>
+            <MudNavLink>Pokemon Mini</MudNavLink>
+            <MudNavLink>Virtual Boy</MudNavLink>
+        </MudNavGroup>
+        <MudNavGroup Title="Playstation">
+            <MudNavLink>PlayStation 1</MudNavLink>
+            <MudNavLink>PSP</MudNavLink>
+        </MudNavGroup>
+        <MudNavGroup Title="Atari">
+            <MudNavLink>Atari 2600</MudNavLink>
+            <MudNavLink>Atari 7800</MudNavLink>
+            <MudNavLink>Atari Jaguar</MudNavLink>
+            <MudNavLink>Atari Lynx</MudNavLink>
+        </MudNavGroup>
+        <MudNavGroup Title="NEC">
+            <MudNavLink>PC Engine</MudNavLink>
+            <MudNavLink>PC-8000</MudNavLink>
+            <MudNavLink>PC-FX</MudNavLink>
+        </MudNavGroup>
+        <MudNavGroup Title="Sega">
+            <MudNavLink>SG-1000</MudNavLink>
+            <MudNavLink>Master System</MudNavLink>
+            <MudNavLink>Game Gear</MudNavLink>
+            <MudNavLink>Mega Drive</MudNavLink>
+            <MudNavLink>Sega CD</MudNavLink>
+            <MudNavLink>Sega 32X</MudNavLink>
+            <MudNavLink>Saturn</MudNavLink>
+            <MudNavLink>Dreamcast</MudNavLink>
+        </MudNavGroup>
+        <MudNavGroup Title="Other">
+            <MudNavLink>3DO</MudNavLink>
+            <MudNavLink>Arcade</MudNavLink>
+            <MudNavLink>Apple II</MudNavLink>
+            <MudNavLink>CoecoVision</MudNavLink>
+            <MudNavLink>Intellivision</MudNavLink>
+            <MudNavLink>Odyssesy 2</MudNavLink>
+            <MudNavLink>MSX</MudNavLink>
+            <MudNavLink>Neo Geo Pocket</MudNavLink>
+            <MudNavLink>Vectrex</MudNavLink>
+            <MudNavLink>Watara Supervision</MudNavLink>
+            <MudNavLink>WonderSwan</MudNavLink>
+        </MudNavGroup>
+    </MudNavMenu>
+</MudDrawer>
 
-<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-    <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </div>
-    </nav>
-</div>
+<MudAppBar Fixed=true>
+    <MudIconButton Icon="@Icons.Material.Filled.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@ToggleDrawer" />
+    <MudSpacer></MudSpacer>
+</MudAppBar>
+
+
+
 
 @code {
-    private bool collapseNavMenu = true;
+    bool open = true;
 
-    private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
-
-    private void ToggleNavMenu()
+    void ToggleDrawer()
     {
-        collapseNavMenu = !collapseNavMenu;
+        open = !open;
     }
 }
