EF database stuff

--- a/RetroAchievementTracker/Shared/NavMenu.razor
+++ b/RetroAchievementTracker/Shared/NavMenu.razor
@@ -5,15 +5,15 @@
     <MudDivider Class="my-2" />
     <MudNavMenu Color="Color.Tertiary" Bordered="true">
         <MudNavGroup Title="Nintendo">
-            <MudNavLink>Game Boy</MudNavLink>
-            <MudNavLink>Game Boy Colour</MudNavLink>
-            <MudNavLink>Game Boy Advance</MudNavLink>
-            <MudNavLink>NES</MudNavLink>
-            <MudNavLink>SNES</MudNavLink>
-            <MudNavLink>Nintendo 64</MudNavLink>
-            <MudNavLink>Nintendo DS</MudNavLink>
-            <MudNavLink>Pokemon Mini</MudNavLink>
-            <MudNavLink>Virtual Boy</MudNavLink>
+            <MudNavLink>Game Boy<MudSpacer /><MudText Color=Color.Error Style="display: inline;">0/1000</MudText></MudNavLink>
+            <MudNavLink>Game Boy Colour<MudSpacer /><MudText Color=Color.Error Style="display: inline;">0/1000</MudText></MudNavLink>
+            <MudNavLink>Game Boy Advance<MudSpacer /><MudText Color=Color.Error Style="display: inline;">0/1000</MudText></MudNavLink>
+            <MudNavLink>NES<MudSpacer /><MudText Color=Color.Error Style="display: inline;">0/1000</MudText></MudNavLink>
+            <MudNavLink>SNES<MudSpacer /><MudText Color=Color.Error Style="display: inline;">0/1000</MudText></MudNavLink>
+            <MudNavLink>Nintendo 64<MudSpacer /><MudText Color=Color.Error Style="display: inline;">0/1000</MudText></MudNavLink>
+            <MudNavLink>Nintendo DS<MudSpacer /><MudText Color=Color.Error Style="display: inline;">0/1000</MudText></MudNavLink>
+            <MudNavLink>Pokemon Mini<MudSpacer /><MudText Color=Color.Error Style="display: inline;">0/1000</MudText></MudNavLink>
+            <MudNavLink>Virtual Boy<MudSpacer /><MudText Color=Color.Error Style="display: inline;">0/1000</MudText></MudNavLink>
         </MudNavGroup>
         <MudNavGroup Title="Playstation">
             <MudNavLink>PlayStation 1</MudNavLink>
