job scheduler setup

--- a/RetroAchievementTracker/Pages/Home.razor
+++ b/RetroAchievementTracker/Pages/Home.razor
@@ -1,6 +1,9 @@
 ﻿@page "/home"
 
-<h3>Home</h3>
+<MudText Typo="Typo.h2" Align="Align.Center" Style="padding-top: 50px; padding-bottom: 30px; color: white;">Home</MudText>
+<MudContainer MaxWidth="MaxWidth.Large" Style="overflow: hidden">
+
+</MudContainer>
 
 @code {
 
