User completed games on nav menu

--- a/RetroAchievementTracker/Shared/MainLayout.razor
+++ b/RetroAchievementTracker/Shared/MainLayout.razor
@@ -20,7 +20,9 @@
             Black = "#272c34ff",
             Background = "#121416",
             DrawerBackground = "#202020",
-            AppbarBackground = "#202020"
+            AppbarBackground = "#202020",
+            Primary = "#29B6F6",
+            Divider = "#4a4a4a"
         }
     };
 }
