--- a/RetroAchievementTracker/Shared/MainLayout.razor
+++ b/RetroAchievementTracker/Shared/MainLayout.razor
@@ -22,7 +22,11 @@
             DrawerBackground = "#202020",
             AppbarBackground = "#202020",
             Primary = "#29B6F6",
-            Divider = "#4a4a4a"
+            Divider = "#4a4a4a",
+            TextPrimary = "#ffffff",
+            TableLines = "#4a4a4a",
+            TableStriped = "#00000005",
+            TableHover = "#0000000a"
         }
     };
 }
