--- a/RetroAchievementTracker/Shared/MainLayout.razor
+++ b/RetroAchievementTracker/Shared/MainLayout.razor
@@ -26,7 +26,10 @@
             TextPrimary = "#ffffff",
             TableLines = "#4a4a4a",
             TableStriped = "#00000005",
-            TableHover = "#0000000a"
+            TableHover = "#29B6F6",
+            ActionDefault = "#29B6F6",
+            TextSecondary = "#29B6F6",
+            Surface = "#202020"
         }
     };
 }
