--- a/RetroAchievementTracker/Pages/Atari/Atari7800.razor
+++ b/RetroAchievementTracker/Pages/Atari/Atari7800.razor
@@ -1,7 +1,18 @@
 ﻿@page "/atari7800"
+@using RetroAchievementTracker.Data.TableData
+@using RetroAchievementTracker.Data.Enums
 
-<h3>Atari7800</h3>
+@inject TableDataService TableDataService;
+
+<MudText Typo="Typo.h3" Align="Align.Center" Class="pt-5 pb-8" Style="color: white;">Atari 7800</MudText>
+
+<GamesTable TableData="TableData" LoggedIn=false></GamesTable>
 
 @code {
+    public List<TableData> TableData;
 
+    protected override void OnInitialized()
+    {
+        TableData = TableDataService.GetConsoleTableData((int)Consoles.ConsoleNames.Atari7800);
+    }
 }
