--- a/RetroAchievementTracker/Pages/Nintendo/Nintendo64.razor
+++ b/RetroAchievementTracker/Pages/Nintendo/Nintendo64.razor
@@ -1,7 +1,18 @@
 ﻿@page "/n64"
+@using RetroAchievementTracker.Data.TableData
+@using RetroAchievementTracker.Data.Enums
 
-<h3>Nintendo_64</h3>
+@inject TableDataService TableDataService;
+
+<MudText Typo="Typo.h3" Align="Align.Center" Class="pt-5 pb-8" Style="color: white;">Nintendo 64</MudText>
+
+<GamesTable TableData="TableData" LoggedIn=false></GamesTable>
 
 @code {
+    public List<TableData> TableData;
 
+    protected override void OnInitialized()
+    {
+        TableData = TableDataService.GetConsoleTableData((int)Consoles.ConsoleNames.Nintendo64);
+    }
 }
