--- a/RetroAchievementTracker/Pages/Nintendo/PokemonMini.razor
+++ b/RetroAchievementTracker/Pages/Nintendo/PokemonMini.razor
@@ -1,7 +1,18 @@
 ﻿@page "/pokemonmini"
+@using RetroAchievementTracker.Data.TableData
+@using RetroAchievementTracker.Data.Enums
 
-<h3>PokemonMini</h3>
+@inject TableDataService TableDataService;
+
+<MudText Typo="Typo.h3" Align="Align.Center" Class="pt-5 pb-8" Style="color: white;">Pokemon Mini</MudText>
+
+<GamesTable TableData="TableData" LoggedIn=false></GamesTable>
 
 @code {
+    public List<TableData> TableData;
 
+    protected override void OnInitialized()
+    {
+        TableData = TableDataService.GetConsoleTableData((int)Consoles.ConsoleNames.PokemonMini);
+    }
 }
