--- a/RetroAchievementTracker/Pages/Sega/SG1000.razor
+++ b/RetroAchievementTracker/Pages/Sega/SG1000.razor
@@ -1,7 +1,18 @@
 ﻿@page "/sg1000"
+@using RetroAchievementTracker.Data.TableData
+@using RetroAchievementTracker.Data.Enums
 
-<h3>SG1000</h3>
+@inject TableDataService TableDataService;
+
+<MudText Typo="Typo.h3" Align="Align.Center" Class="pt-5 pb-8" Style="color: white;">SG100</MudText>
+
+<GamesTable TableData="TableData" LoggedIn=false></GamesTable>
 
 @code {
+    public List<TableData> TableData;
 
+    protected override void OnInitialized()
+    {
+        TableData = TableDataService.GetConsoleTableData((int)Consoles.ConsoleNames.SG100);
+    }
 }
